--- a/SilentAuction/Views/Categories/Delete.cshtml
+++ b/SilentAuction/Views/Categories/Delete.cshtml
@@ -1,4 +1,4 @@
-@model SilentAuction.Models.Catagory
+@model SilentAuction.Models.Category
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Catagory</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="Id" />
