--- a/SilentAuction/Views/Categories/Details.cshtml
+++ b/SilentAuction/Views/Categories/Details.cshtml
@@ -1,4 +1,4 @@
-@model SilentAuction.Models.Catagory
+@model SilentAuction.Models.Category
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Catagory</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
