--- a/SilentAuction/Views/Categories/Index.cshtml
+++ b/SilentAuction/Views/Categories/Index.cshtml
@@ -1,10 +1,10 @@
-@model IEnumerable<SilentAuction.Models.Catagory>
+@model IEnumerable<SilentAuction.Models.Category>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>@ViewData["Title"]</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
