added picure button added auction end messages

--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -143,18 +143,25 @@
             var oneMinuet = 1000 * 60;
             var differenceInMilliseconds = endDate.getTime() - currentDate.getTime();
 
-
             var days = Math.round(differenceInMilliseconds / oneDay);
             var hours = Math.round((differenceInMilliseconds % oneDay) / oneHour);
             var minutes = Math.round(((differenceInMilliseconds % oneDay) % oneHour) / oneMinuet);
             var seconds = Math.round((((differenceInMilliseconds % oneDay) % oneHour) % oneMinuet) / 1000);
 
-           // var days = Math.round(differenceInMilliseconds / oneDay);
+            // var days = Math.round(differenceInMilliseconds / oneDay);
             //var hours = Math.round(differenceInMilliseconds / (oneDay / 24));
             //var minutes = Math.round(differenceInMilliseconds / (oneDay / 24 / 60));
-           // var seconds = Math.round(differenceInMilliseconds / (oneDay / 24 / 60 / 60));
+            // var seconds = Math.round(differenceInMilliseconds / (oneDay / 24 / 60 / 60));
 
-            document.getElementById("time").innerHTML = "<h3><strong>Time Till Auction End:</strong> " + days + ":" + hours + ":" + minutes + ":" + seconds + "</h3>";
+            if (differenceInMilliseconds <= 0) {
+
+                document.getElementById("time").innerHTML = "<h3><strong>Time Till Auction End:</strong> AUCTION END </h3>";
+            }
+            else {
+
+                document.getElementById("time").innerHTML = "<h3><strong>Time Till Auction End:</strong> " + days + ":" + hours + ":" + minutes + ":" + seconds + "</h3>";
+
+            }
         }
     </script>
 }
