--- a/SilentAuction/Views/Items/Create.cshtml
+++ b/SilentAuction/Views/Items/Create.cshtml
@@ -47,6 +47,8 @@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-offset-0 col-md-10">
+                <input type="submit" value="Add Picture" class="btn btn-default" />
             </div>
         </div>
     </div>
