Addend more detail to the Auction page. Renambed Catagories/catagories to Categories/categories. My bad I named them wrong in the first place.

--- a/SilentAuction/Views/Items/Details.cshtml
+++ b/SilentAuction/Views/Items/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Catagory)
+            @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Catagory.Name)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RetailPrice)
