--- a/SilentAuction/Views/Items/Index.cshtml
+++ b/SilentAuction/Views/Items/Index.cshtml
@@ -19,8 +19,9 @@
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Catagory)
+                    @Html.DisplayNameFor(model => model.Category)
                 </th>
+
                 <th>
                     @Html.DisplayNameFor(model => model.RetailPrice)
                 </th>
@@ -40,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Catagory)
+                @Html.DisplayFor(modelItem => item.Category)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RetailPrice)
