--- a/SilentAuction/Views/Items/Delete.cshtml
+++ b/SilentAuction/Views/Items/Delete.cshtml
@@ -25,10 +25,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Catagory)
+            @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Catagory.Name)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RetailPrice)
