Changed the Delete and Details view of Items to be "th-TH" culture money.  Changed the index of Items/Listings to an async method. Cleaned the layout because it is an Administration page layout, albeit a not very well put together page. We can make it good later.

--- a/SilentAuction/Views/Items/Delete.cshtml
+++ b/SilentAuction/Views/Items/Delete.cshtml
@@ -1,4 +1,5 @@
-@model SilentAuction.Models.Item
+@using SilentAuction.ViewModels
+@model ItemViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -28,7 +29,7 @@
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Category.Name)
+            @Html.DisplayFor(model => model.Category)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RetailPrice)
@@ -40,7 +41,7 @@
             @Html.DisplayNameFor(model => model.Sponsor)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Sponsor.Name)
+            @Html.DisplayFor(model => model.Sponsor)
         </dd>
     </dl>
     
