--- a/SilentAuction/Views/Shared/_Layout.cshtml
+++ b/SilentAuction/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Auctions" asp-action="Index">Auctions</a></li>
                     <li><a asp-area="" asp-controller="Listings" asp-action="Index">Listings</a></li>
-                    <li><a asp-area="" asp-controller="Items" asp-action="Index"><span class="glyphicon glyphicon-plus"></span>Items</a></li>
+                    <li><a asp-area="" asp-controller="Items" asp-action="Index">Items</a></li>
                     <li><a asp-area="" asp-controller="Sponsors" asp-action="Index">Sponsors</a></li>
                     <li><a asp-area="" asp-controller="Categories" asp-action="Index">Categories</a></li>
                     <li><a asp-area="" asp-controller="BidHistories" asp-action="Index">BidHistories</a></li>
@@ -48,11 +48,11 @@
                 </ul>
             </div>
 
-            <div class="navbar-collapse collapse">
+            @*<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a asp-area="" asp-controller="Home" asp-action="Registration"><span class="glyphicon glyphicon-user"></span>Registration</a></li>
                 </ul>
-            </div>
+            </div>*@
         </div>
     </nav>
 
