--- a/SilentAuction/Views/Items/Details.cshtml
+++ b/SilentAuction/Views/Items/Details.cshtml
@@ -1,4 +1,5 @@
-@model SilentAuction.Models.Item
+@using SilentAuction.ViewModels
+@model ItemViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -26,7 +27,7 @@
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Category.Name)
+            @Html.DisplayFor(model => model.Category)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RetailPrice)
@@ -38,7 +39,7 @@
             @Html.DisplayNameFor(model => model.Sponsor)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Sponsor.Name)
+            @Html.DisplayFor(model => model.Sponsor)
         </dd>
     </dl>
 </div>
