Added an upload media on the item edit page. Added the ToThaiCurrencyDisplayString extension method for decimals.

--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -88,11 +88,11 @@
                         </div>
 
                         <div class="col-md-2">
-                            <p>Retail Price: @listing.Item.RetailPrice.ToString("C", new CultureInfo("th-TH"))</p>
+                            <p>Retail Price: @listing.Item.RetailPrice.ToThaiCurrencyDisplayString()</p>
                         </div>
 
                         <div class="col-md-2">
-                            <p>Current Bid: @listing.MinimumBid.ToString("C", new CultureInfo("th-TH"))</p>
+                            <p>Current Bid: @listing.MinimumBid.ToThaiCurrencyDisplayString()</p>
                         </div>
                     </div>
                 </div>
