--- a/SilentAuction/Views/Items/Edit.cshtml
+++ b/SilentAuction/Views/Items/Edit.cshtml
@@ -11,7 +11,7 @@
         <h4>Item</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="Id" />
         <div class="form-group">
             <label asp-for="SponsorId" class="control-label col-md-2"></label>
             <div class="col-md-10">
@@ -54,6 +54,23 @@
         </div>
     </div>
 </form>
+
+<div class="panel panel-default">
+    <div class="panel-heading">
+        <h3 class="panel-title">Upload Images</h3>
+    </div>
+    <div class="panel-body">
+        <form method="post" asp-controller="Items" asp-action="Upload" enctype="multipart/form-data">
+            <input type="hidden" name="itemId" value="@Model.Id" />
+            <div class="form-group">
+                <input type="file" name="files" multiple>
+            </div>
+            <div>
+                <input type="submit" class="btn btn-default" value="Upload" />
+            </div>
+        </form>
+    </div>
+</div>
 
 <div>
     <a asp-action="Index">Back to List</a>
