--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -94,7 +94,12 @@
                         <div class="col-md-2">
                             <p>Current Bid: @listing.MinimumBid.ToThaiCurrencyDisplayString()</p>
                         </div>
-                    </div>
+                        <form asp-controller="Auctions" asp-action="SilentAuction" method="get">
+                            <div class="col-md-2" style="padding-top: 50px">
+                                <input type="button" value="Bid" class="btn btn-default btn-block" />
+                            </div>  
+                        </form>
+                    </div>      
                 </div>
             </div>
         </div>
