--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -95,7 +95,12 @@
                             <p>Current Bid: @listing.MinimumBid.ToThaiCurrencyDisplayString()</p>
                         </div>
                             <div class="col-md-2" style="padding-top: 50px">
-                                <input type="button" value="Bid" class="btn btn-default btn-block" />
+                                <a asp-controller="Listings"
+                                   asp-action="Details"
+                                   asp-route-id="@listing.Id"
+                                   class="btn btn-default ">
+                                    Bid Now
+                                </a>
                             </div>  
                     </div>      
                 </div>
