--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -1,5 +1,4 @@
-@using SilentAuction.ViewModels
-@model ListingViewModel
+@model SilentAuction.Models.Listing
 
 @{
     ViewData["Title"] = "Details";
@@ -11,6 +10,7 @@
     <h4>Listing</h4>
     <hr />
     <dl class="dl-horizontal">
+
         <dt>
             @Html.DisplayNameFor(model => model.MinimumBid)
         </dt>
@@ -37,7 +37,49 @@
         </dd>
     </dl>
 </div>
+
+<form asp-action="Create">
+    <div class="form-horizontal">
+        <h4>Bid Now</h4>
+        <hr />
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label class="col-md-2 control-label">First Name:</label>
+            <div class="col-md-10">
+                <input class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label  class="col-md-2 control-label">Last Name:</label>
+            <div class="col-md-10">
+                <input class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label  class="col-md-2 control-label">Email:</label>
+            <div class="col-md-10">
+                <input class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Phone Number:</label>
+            <div class="col-md-10">
+                <input class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label  class="col-md-2 control-label">Bid Amount:</label>
+            <div class="col-md-10">
+                <input class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Place Bid" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+</form>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-controller="Auctions" asp-action="SilentAuction" asp-route-id="@(Model.AuctionId)">Return to Listings</a>
 </div>
