--- a/SilentAuction/Views/BidHistories/BidDetail.cshtml
+++ b/SilentAuction/Views/BidHistories/BidDetail.cshtml
@@ -3,7 +3,6 @@
 
 @model BidHistoryViewModel
 @{
-    var listing = Model.Listing;
     ViewData["Title"] = "Bid Detail";
 }
 
@@ -14,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(listing.Item.Name)
+            @Html.DisplayNameFor(model => model.MyBid.User.FirstName)
         </dt>
     </dl>
 </div>
