--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -1,42 +1,53 @@
-@model SilentAuction.Models.Listing
+@using SilentAuction.ViewModels;
+@using SilentAuction.Controllers;
+@using System.Globalization;
+@model BidHistoryViewModel
 
 @{
+    var listing = Model.MyListing;
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>@ViewData["Title"]</h2>
 
 <div>
     <h4>Listing</h4>
     <hr />
-    <dl class="dl-horizontal">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.MinimumBid)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.MinimumBid)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Increment)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Increment)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Auction)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Auction)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Item)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Item)
-        </dd>
-    </dl>
-</div>
+        <dl class="dl-horizontal">
+
+            <dt>
+                <label >Name:</label>
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => listing.Item.Name)
+            </dd>
+            <dt>
+                <label >Description:</label>
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => listing.Item.Description)
+            </dd>
+            <dt>
+                <label >Sponsor:</label>
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.MySponsor)
+            </dd>
+            <dt>
+                <label asp-for="CurrentBid" >Current Bid:</label>
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CurrentBid)
+            </dd>
+            <dt>
+                <label asp-for="MinimumBid" >Minimum Bid:</label>
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => (model.MinimumBid))
+            </dd>
+        </dl>
+    </div>
 
 <form asp-action="Create">
     <div class="form-horizontal">
@@ -45,41 +56,47 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
             <label class="col-md-2 control-label">First Name:</label>
-            <div class="col-md-10">
+            <div class="col-md-5">
+                <input asp-for="MyUser.FirstName" class="form-control" />
+                <span asp-validation-for="MyUser.FirstName" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Last Name:</label>
+            <div class="col-md-5">
                 <input class="form-control" />
             </div>
         </div>
         <div class="form-group">
-            <label  class="col-md-2 control-label">Last Name:</label>
-            <div class="col-md-10">
-                <input class="form-control" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label  class="col-md-2 control-label">Email:</label>
-            <div class="col-md-10">
+            <label class="col-md-2 control-label">Email:</label>
+            <div class="col-md-5">
                 <input class="form-control" />
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Phone Number:</label>
-            <div class="col-md-10">
+            <div class="col-md-5">
                 <input class="form-control" />
             </div>
         </div>
         <div class="form-group">
-            <label  class="col-md-2 control-label">Bid Amount:</label>
-            <div class="col-md-10">
+            <label class="col-md-2 control-label">Bid Amount:</label>
+            <div class="col-md-5">
                 <input class="form-control" />
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Place Bid" class="btn btn-default" />
+                <a asp-controller="BidHistories"
+                   asp-action="BidHistories"
+                   asp-route-id="@listing.Id"
+                   class="btn btn-default ">
+                    Place Bid
+                </a>
             </div>
         </div>
     </div>
 </form>
 <div>
-    <a asp-controller="Auctions" asp-action="SilentAuction" asp-route-id="@(Model.AuctionId)">Return to Listings</a>
+    <a asp-controller="Auctions" asp-action="SilentAuction" asp-route-id="@(listing.AuctionId)">Return to Listings</a>
 </div>
