--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -49,7 +49,7 @@
         </dl>
     </div>
 
-<form asp-action="Create">
+<form asp-controller="BidHistories" asp-action="BidDetails" asp-route-id="@listing.Id">
     <div class="form-horizontal">
         <h4>Bid Now</h4>
         <hr />
@@ -57,42 +57,41 @@
         <div class="form-group">
             <label class="col-md-2 control-label">First Name:</label>
             <div class="col-md-5">
-                <input asp-for="MyUser.FirstName" class="form-control" />
-                <span asp-validation-for="MyUser.FirstName" class="text-danger"></span>
+                <input asp-for="MyBidDetails.FirstName" class="form-control" />
+                <span asp-validation-for="MyBidDetails.FirstName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Last Name:</label>
             <div class="col-md-5">
-                <input class="form-control" />
+                <input asp-for="MyBidDetails.LastName" class="form-control" />
+                <span asp-validation-for="MyBidDetails.LastName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Email:</label>
             <div class="col-md-5">
-                <input class="form-control" />
+                <input asp-for="MyBidDetails.Email" class="form-control" />
+                <span asp-validation-for="MyBidDetails.Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Phone Number:</label>
             <div class="col-md-5">
-                <input class="form-control" />
+                <input asp-for="MyBidDetails.Phone" class="form-control" />
+                <span asp-validation-for="MyBidDetails.Phone" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Bid Amount:</label>
             <div class="col-md-5">
-                <input class="form-control" />
+                <input asp-for="MyBidDetails.Amount" class="form-control" />
+                <span asp-validation-for="MyBidDetails.Amount" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <a asp-controller="BidHistories"
-                   asp-action="BidHistories"
-                   asp-route-id="@listing.Id"
-                   class="btn btn-default ">
-                    Place Bid
-                </a>
+                <input type="submit" value="Place Bid" class="btn btn-default"/>
             </div>
         </div>
     </div>
