--- a/SilentAuction/Views/BidHistories/BidDetails.cshtml
+++ b/SilentAuction/Views/BidHistories/BidDetails.cshtml
@@ -19,12 +19,6 @@
             @Html.DisplayFor(model => model.User.FirstName)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.User.LastName)
         </dt>
         <dd>
@@ -59,6 +53,12 @@
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Amount)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Date)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Date)
         </dd>
     </dl>
 </div>
