Moved code to create/store user and bid from the BidDetails action under the BidHistories controller to the Details action in the Listings controller. This better allows for form validation since we are using the Listings/Details view as are Details/Place Bid page. In the same sense, I deleted the BidDetails view that I had created the other day and just copied the html for the view to the actual Bid Details view. This cleans it up from both the user and admin standpoint. Navigation goes from the silent auction view to the listings detail view to place a bid/view more details, and then to the bid details view should a successful view be placed. Added return to listings navigation to both of the detail views. Lastly, implemented checks to ensure bids are equal than or greater to the minimum bid and in the correct increment.

--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -49,11 +49,11 @@
         </dl>
     </div>
 
-<form asp-controller="BidHistories" asp-action="BidDetails" asp-route-id="@listing.Id">
+<form asp-action="Details" asp-route-id="@listing.Id">
     <div class="form-horizontal">
         <h4>Bid Now</h4>
         <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <div class="form-group">
             <label class="col-md-2 control-label">First Name:</label>
             <div class="col-md-5">
