had a lingering change for the edit item

--- a/SilentAuction/Views/Items/Index.cshtml
+++ b/SilentAuction/Views/Items/Index.cshtml
@@ -19,7 +19,7 @@
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Catagory)
+                    @Html.DisplayNameFor(model => model.category)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.RetailPrice)
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Catagory)
+                @Html.DisplayFor(modelItem => item.category)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.RetailPrice)
