--- a/SilentAuction/Views/Items/Edit.cshtml
+++ b/SilentAuction/Views/Items/Edit.cshtml
@@ -34,10 +34,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="CatagoryId" class="control-label col-md-2"></label>
+            <label asp-for="Category" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <select asp-for="CatagoryId" class="form-control" asp-items="ViewBag.CatagoryId"></select>
-                <span asp-validation-for="CatagoryId" class="text-danger"></span>
+                <select asp-for="Category" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <span asp-validation-for="Category" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
