Fixed a bug allowing a user to enter an invalid email address, but have the bid placed anyway using the previous email entered. Added email validation, phone number validation including number format, and number validation for the bid amount field. Auto-populate bid amount when first viewing the details page with the minimum bid. User can also click up or down to select a bid value and the control will increment the amount indicated for that specific listing.

--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -64,28 +64,32 @@
         <div class="form-group">
             <label class="col-md-2 control-label">Last Name:</label>
             <div class="col-md-5">
-                <input asp-for="MyBidDetails.LastName" class="form-control" />
+                <input  asp-for="MyBidDetails.LastName" class="form-control" />
                 <span asp-validation-for="MyBidDetails.LastName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Email:</label>
             <div class="col-md-5">
-                <input asp-for="MyBidDetails.Email" class="form-control" />
+                <input type="email" asp-for="MyBidDetails.Email" class="form-control" id="bidEmail"/>
                 <span asp-validation-for="MyBidDetails.Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Phone Number:</label>
             <div class="col-md-5">
-                <input asp-for="MyBidDetails.Phone" class="form-control" />
+                <input type='tel'  
+                       pattern='\d{3}[\-]\d{3}[\-]\d{4}' 
+                       title='555-55-5555)' 
+                       asp-for="MyBidDetails.Phone" 
+                       class="form-control" />
                 <span asp-validation-for="MyBidDetails.Phone" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Bid Amount:</label>
             <div class="col-md-5">
-                <input asp-for="MyBidDetails.Amount" class="form-control" />
+                <input type ="number" value="@(Decimal.ToInt32(Model.MinimumBid))" step="@Model.Increment" asp-validation-for="MyBidDetails.Amount" class="form-control" />
                 <span asp-validation-for="MyBidDetails.Amount" class="text-danger"></span>
             </div>
         </div>
