--- a/SilentAuction/Views/BidHistories/Details.cshtml
+++ b/SilentAuction/Views/BidHistories/Details.cshtml
@@ -3,10 +3,9 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>BidDetail</h2>
+<h2>Bid Details</h2>
 
 <div>
-    <h4>Listing Details</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
