--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -5,13 +5,12 @@
 
 @{
     var listing = Model.MyListing;
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Listing Details";
 }
 
 <h2>@ViewData["Title"]</h2>
 
 <div>
-    <h4>Listing</h4>
     <hr />
 
         <dl class="dl-horizontal">
@@ -35,16 +34,22 @@
                 @Html.DisplayFor(model => model.MySponsor)
             </dd>
             <dt>
+                <p>Retail Value:</p>
+            </dt>
+            <dd>
+                <p>@listing.Item.RetailPrice.ToThaiCurrencyDisplayString()</p>
+            </dd>
+            <dt>
                 <label asp-for="CurrentBid" >Current Bid:</label>
             </dt>
             <dd>
-                @Html.DisplayFor(model => model.CurrentBid)
+                <p>@Model.CurrentBid.ToThaiCurrencyDisplayString()</p>
             </dd>
             <dt>
                 <label asp-for="MinimumBid" >Minimum Bid:</label>
             </dt>
             <dd>
-                @Html.DisplayFor(model => (model.MinimumBid))
+                <p>@Model.MinimumBid.ToThaiCurrencyDisplayString()</p>
             </dd>
         </dl>
     </div>
@@ -89,7 +94,7 @@
         <div class="form-group">
             <label class="col-md-2 control-label">Bid Amount:</label>
             <div class="col-md-5">
-                <input type ="number" value="@(Decimal.ToInt32(Model.MinimumBid))" min="@(Decimal.ToInt32(Model.MinimumBid))"step="@Model.Increment" asp-validation-for="MyBidDetails.Amount" class="form-control" />
+                <input type ="number" value="@(Decimal.ToInt32(Model.MinimumBid))" min="@(Decimal.ToInt32(Model.MinimumBid))"step="@Model.Increment" asp-for="MyBidDetails.Amount" class="form-control" />
                 <span asp-validation-for="MyBidDetails.Amount" class="text-danger"></span>
             </div>
         </div>
