--- a/SilentAuction/Views/Items/Delete.cshtml
+++ b/SilentAuction/Views/Items/Delete.cshtml
@@ -1,4 +1,5 @@
 @using SilentAuction.ViewModels
+@using SilentAuction.Controllers;
 @model ItemViewModel
 
 @{
@@ -44,7 +45,28 @@
             @Html.DisplayFor(model => model.Sponsor)
         </dd>
     </dl>
-    
+    <div>
+        @if (Model.MediaIds.Count > 0)
+        {
+            <p>Images</p>
+            @foreach (var mediaId in Model.MediaIds)
+            {
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="media">
+                            <div class="media-middle">
+                                <div>
+                                    <img class="media-object" src="@Url.Action(nameof(MediaController.Thumbnail), "Media", values: new { id = mediaId})" />
+                                </div>
+                            </div>
+                            <div class="media-body">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    </div>
     <form asp-action="Delete">
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
