--- a/SilentAuction/Views/Items/Details.cshtml
+++ b/SilentAuction/Views/Items/Details.cshtml
@@ -1,4 +1,5 @@
 @using SilentAuction.ViewModels
+@using SilentAuction.Controllers;
 @model ItemViewModel
 
 @{
@@ -42,6 +43,28 @@
             @Html.DisplayFor(model => model.Sponsor)
         </dd>
     </dl>
+    <div>
+        @if (Model.MediaIds.Count > 0)
+        {
+            <p>Images</p>
+            @foreach (var mediaId in Model.MediaIds)
+            {
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <div class="media">
+                            <div class="media-middle">
+                                <div>
+                                    <img class="media-object" src="@Url.Action(nameof(MediaController.Thumbnail), "Media", values: new { id = mediaId})" />
+                                </div>
+                            </div>
+                            <div class="media-body">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    </div>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
