Revert "had a lingering change for the edit item"
This reverts commit 64e3f0991f87ffb60398f09c66b75095b9059a70.

--- a/SilentAuction/Views/Items/Delete.cshtml
+++ b/SilentAuction/Views/Items/Delete.cshtml
@@ -25,10 +25,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Category)
+            @Html.DisplayNameFor(model => model.Catagory)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Category.Name)
+            @Html.DisplayFor(model => model.Catagory.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.RetailPrice)
