--- a/SilentAuction/Views/Categories/Edit.cshtml
+++ b/SilentAuction/Views/Categories/Edit.cshtml
@@ -8,7 +8,7 @@
 
 <form asp-action="Edit">
     <div class="form-horizontal">
-        <h4>category</h4>
+        <h4>Catagory</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
