--- a/SilentAuction/Views/Items/Create.cshtml
+++ b/SilentAuction/Views/Items/Create.cshtml
@@ -32,9 +32,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Category" class="col-md-2 control-label"></label>
+            <label asp-for="CatagoryId" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <select asp-for="Category" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CatagoryId" class="form-control" asp-items="ViewBag.CatagoryId"></select>
             </div>
         </div>
         <div class="form-group">
