Fixed issue with number formatting creating a database error.

--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -85,7 +85,7 @@
             <div class="col-md-5">
                 <input type='tel'  
                        pattern='\d{3}[\-]\d{3}[\-]\d{4}' 
-                       title='555-55-5555)' 
+                       title='555-55-5555' 
                        asp-for="MyBidDetails.Phone" 
                        class="form-control" />
                 <span asp-validation-for="MyBidDetails.Phone" class="text-danger"></span>
