Added "Offer Expires" and "Terms and Conditions" strings to Listing Details View, Items Model, and BidHistoryViewModel. Populated "2 Nights Accom. Ocean View Pool Villa Trisara" TestSeedData.

--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -51,6 +51,18 @@
             <dd>
                 <p>@Model.MinimumBid.ToThaiCurrencyDisplayString()</p>
             </dd>
+            <dt>
+                <label asp-for="OfferExpires">Offer Expires:</label>
+            </dt>
+            <dd>
+                <p>@Html.DisplayFor(model => listing.Item.OfferExpires)</p>
+            </dd>
+            <dt>
+                <label asp-for="Terms">Terms and Conditions:</label>
+            </dt>
+            <dd>
+                <p>@Html.DisplayFor(model => listing.Item.Terms)</p>
+            </dd>
         </dl>
     </div>
 
