--- a/SilentAuction/Views/Listings/Details.cshtml
+++ b/SilentAuction/Views/Listings/Details.cshtml
@@ -8,51 +8,65 @@
     ViewData["Title"] = "Listing Details";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2 >@ViewData["Title"]</h2>
 
 <div>
-    <hr />
+    @{
+        var image = listing.Item.ItemMedia.FirstOrDefault();
+    }
+    @if (image != null)
+            {
+        <img class="center-block" src="@Url.Action(nameof(MediaController.DetailSized), "Media", values: new { id = image.MediaId})" />
+    }
+    else
+    {
+        <img class="center-block" src="~/images/no-image.jpg" />
+    }
+</div>
 
-        <dl class="dl-horizontal">
+<div>
+    <dl class="dl-horizontal">
 
-            <dt>
-                <label >Name:</label>
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => listing.Item.Name)
-            </dd>
-            <dt>
-                <label >Description:</label>
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => listing.Item.Description)
-            </dd>
-            <dt>
-                <label >Sponsor:</label>
-            </dt>
-            <dd>
-                @Html.DisplayFor(model => model.MySponsor)
-            </dd>
-            <dt>
-                <p>Retail Value:</p>
-            </dt>
-            <dd>
-                <p>@listing.Item.RetailPrice.ToThaiCurrencyDisplayString()</p>
-            </dd>
-            <dt>
-                <label asp-for="CurrentBid" >Current Bid:</label>
-            </dt>
-            <dd>
-                <p>@Model.CurrentBid.ToThaiCurrencyDisplayString()</p>
-            </dd>
-            <dt>
-                <label asp-for="MinimumBid" >Minimum Bid:</label>
-            </dt>
-            <dd>
-                <p>@Model.MinimumBid.ToThaiCurrencyDisplayString()</p>
-            </dd>
-        </dl>
-    </div>
+        <dt>
+            <label>Name:</label>
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => listing.Item.Name)
+        </dd>
+        <dt>
+            <label>Description:</label>
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => listing.Item.Description)
+        </dd>
+        <dt>
+            <label>Sponsor:</label>
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.MySponsor)
+        </dd>
+        <dt>
+            <p>Retail Value:</p>
+        </dt>
+        <dd>
+            <p>@listing.Item.RetailPrice.ToThaiCurrencyDisplayString()</p>
+        </dd>
+        <dt>
+            <label asp-for="CurrentBid">Current Bid:</label>
+        </dt>
+        <dd>
+            <p>@Model.CurrentBid.ToThaiCurrencyDisplayString()</p>
+        </dd>
+        <dt>
+            <label asp-for="MinimumBid">Minimum Bid:</label>
+        </dt>
+        <dd>
+            <p>@Model.MinimumBid.ToThaiCurrencyDisplayString()</p>
+        </dd>
+    </dl>
+</div>
+
+
 
 <form asp-action="Details" asp-route-id="@listing.Id">
     <div class="form-horizontal">
@@ -69,24 +83,24 @@
         <div class="form-group">
             <label class="col-md-2 control-label">Last Name:</label>
             <div class="col-md-5">
-                <input  asp-for="MyBidDetails.LastName" class="form-control" />
+                <input asp-for="MyBidDetails.LastName" class="form-control" />
                 <span asp-validation-for="MyBidDetails.LastName" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Email:</label>
             <div class="col-md-5">
-                <input type="email" asp-for="MyBidDetails.Email" class="form-control" id="bidEmail"/>
+                <input type="email" asp-for="MyBidDetails.Email" class="form-control" id="bidEmail" />
                 <span asp-validation-for="MyBidDetails.Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label class="col-md-2 control-label">Phone Number:</label>
             <div class="col-md-5">
-                <input type='tel'  
-                       pattern='\d{3}[\-]\d{3}[\-]\d{4}' 
-                       title='555-55-5555' 
-                       asp-for="MyBidDetails.Phone" 
+                <input type='tel'
+                       pattern='\d{3}[\-]\d{3}[\-]\d{4}'
+                       title='555-55-5555'
+                       asp-for="MyBidDetails.Phone"
                        class="form-control" />
                 <span asp-validation-for="MyBidDetails.Phone" class="text-danger"></span>
             </div>
@@ -94,13 +108,13 @@
         <div class="form-group">
             <label class="col-md-2 control-label">Bid Amount:</label>
             <div class="col-md-5">
-                <input type ="number" value="@(Decimal.ToInt32(Model.MinimumBid))" min="@(Decimal.ToInt32(Model.MinimumBid))"step="@Model.Increment" asp-for="MyBidDetails.Amount" class="form-control" />
+                <input type="number" value="@(Decimal.ToInt32(Model.MinimumBid))" min="@(Decimal.ToInt32(Model.MinimumBid))" step="@Model.Increment" asp-for="MyBidDetails.Amount" class="form-control" />
                 <span asp-validation-for="MyBidDetails.Amount" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Place Bid" class="btn btn-default"/>
+                <input type="submit" value="Place Bid" class="btn btn-default" />
             </div>
         </div>
     </div>
