--- a/SilentAuction/Views/Items/Edit.cshtml
+++ b/SilentAuction/Views/Items/Edit.cshtml
@@ -50,6 +50,20 @@
             </div>
         </div>
         <div class="form-group">
+            <label asp-for="OfferExpires" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="OfferExpires" class="form-control" />
+                <span asp-validation-for="OfferExpires" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Terms" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Terms" class="form-control" />
+                <span asp-validation-for="Terms" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
