--- a/SilentAuction/Views/Items/Create.cshtml
+++ b/SilentAuction/Views/Items/Create.cshtml
@@ -47,7 +47,7 @@
         <div class="form-group">
             <label asp-for="OfferExpires" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="OfferExpires" class="form-control" />
+                <input type="date" asp-for="OfferExpires" class="form-control" />
                 <span asp-validation-for="OfferExpires" class="text-danger"></span>
             </div>
         </div>
