Added Name field to the Auction Create and Edit views. Updated Auctions Controller by adding Name property to the bind method for both the post actions for these views. Updated Items Controller so that Add Picture and Create buttons on the Create Item View redirect to the Edit Item view rather than return to index as that is where the upload images functionality currently resides. Updated Home Index view, Auction Index View, and Auction Details view to include the added name property.

--- a/SilentAuction/Views/BidHistories/Details.cshtml
+++ b/SilentAuction/Views/BidHistories/Details.cshtml
@@ -48,7 +48,7 @@
             @Html.DisplayNameFor(model => model.Amount)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Amount)
+            <p>@Model.Amount.ToThaiCurrencyDisplayString()</p>
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Date)
