--- a/SilentAuction/Views/Auctions/Index.cshtml
+++ b/SilentAuction/Views/Auctions/Index.cshtml
@@ -12,6 +12,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
                 <th>
                     @Html.DisplayNameFor(model => model.StartDate)
                 </th>
@@ -24,6 +27,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.StartDate)
             </td>
