--- a/SilentAuction/Views/Home/Index.cshtml
+++ b/SilentAuction/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <thead>
         <tr>
             <th>
-                Auction Id:
+                @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.StartDate)
@@ -26,7 +26,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Id)
+                    @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.StartDate)
