--- a/SilentAuction/Views/Items/Create.cshtml
+++ b/SilentAuction/Views/Items/Create.cshtml
@@ -62,7 +62,7 @@
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
                 <div class="col-md-offset-0 col-md-10">
-                    <input type="submit" value="Add Picture" class="btn btn-default" />
+                    <input asp-action="Create" type="submit" value="Add Picture" class="btn btn-default" />
                 </div>
             </div>
         </div>
